--- a/showcase/build.gradle
+++ b/showcase/build.gradle
@@ -1,21 +1,21 @@
 apply plugin: 'com.android.feature'
 
 android {
-    compileSdkVersion 28
-    defaultConfig {
-        minSdkVersion 23
-        targetSdkVersion 28
-        versionCode 1
-        versionName "1.0"
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
-    }
+  compileSdkVersion 28
+  defaultConfig {
+    minSdkVersion 23
+    targetSdkVersion 28
+    versionCode 1
+    versionName "1.0"
+    testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+  }
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation project(':base')
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'com.android.support.test:runner:1.0.2'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
-    
+  implementation fileTree(dir: 'libs', include: ['*.jar'])
+  implementation project(':base')
+  testImplementation 'junit:junit:4.12'
+  androidTestImplementation 'androidx.test:rules:1.1.0'
+  androidTestImplementation 'androidx.test.ext:junit:1.0.0'
+  androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1-beta01'
 }
